--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
 ---
 layout: home
-author_profile: true
+author_profile: false
+classes: wide
 ---
+
+<div style="max-width: 720px; margin: 0 auto; padding: 60px 24px;">
+  <h1 style="font-size: 42px; font-weight: 400; margin-bottom: 16px; line-height: 1.2;">Long Journey</h1>
+  <p style="font-size: 18px; color: #666; line-height: 1.7; margin-bottom: 80px;">
+    오랜 생각과 다양한 경험을 기록합니다.
+  </p>
+</div>
